--- a/README
+++ b/README
@@ -1,42 +1,85 @@
-  Apache module for flickr access.
-  Needs the API key and shared secret.
+mod_flickr is a apache module (for apache 2.0 and above) calls flickr API's
+for a configured used (in httpd.conf) to get his public photos, sets, photos
+in sets and recent photos uploaded in photos by everyone.
 
-  API call:
-	http://www.whatsoever.com/<username>/<page>
+Currently only 4 api calls have been implmeneted, as described above) and all
+API's return data in XML format. The XML can then be parsed by the calling code
+(e.g. front end Javascript/AJAX) to display thumbnails of the images say in a
+scrollbar. (Code for js/ajax is not distributed as yet but should be trivial for
+anyone who has it's knowledge)
 
-  where <username> is the username of the configured user in the httpd configuration file (See CONFIGURATION)
-	    <page> is the page number for the requested photos.
-
-  mod_flickr returns metadata for 30 photos per call (i.e. per page) which is currently not configurable.
-  (unless you change the code and recompile it, which you are most welcome to do.). The call needs to be
-  made using AJAX from the frontend (for better user experience). Also frontend need to process the XML
-  returned and consturct the thumbnal URL. (code not yet written yet but is trivial for any JS/AJAX prorammer).
-
-  1. INSTALLATION
+0. INSTALLATION
+---------------
         mod_flickr needs libcurl and any *nix/*BSD system. You may need to edit the paths in the 'Makefile' (INCLDIR/LIBDIR) to specify the include and the library
         paths for libcurl includes and shared library. (need to provide `configure' script for this, later)
 
-        % make all      # make sure `apxs' is in $PATH else edit the Makefile giving the full path for `apxs'
+        % make 		# make sure `apxs' is in $PATH else edit the Makefile giving the full path for `apxs'
 
-  2. CONFIGURATION
+Apache configuration (httpd.conf)
+--------------------------------
 
-  *Apache configuration entries (httpd.conf)
+1. Make sure you have the following line in the Apache
+   configuration file (noramlly httpd.conf)
 
-	LoadModule mod_flickr   libexec/apache22/mod_flickr.so		# see apache manuals on how to load DSO's.
+	LoadModule mod_flickr   libexec/apache22/mod_flickr.so    # see apache manuals on how to load DSO's.
 
-	FlickrMod       On
-	FlickrUser      vshankar
-	FlickrKey       vshankar xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-	FlickrSecret    vshankar xxxxxxxxxxxxxxx
-	FlickrAuth      vshankar xxxxxxxxxxxxxxxxxx-xxxxxxxxxxxxxxx 
+2. Also to activate mod_flickr and to configure the user
+   the following lines need to be added in apache conf. file.
 
-	The above config. is for a single user. Likewise more than one user can be configured provided you have their credentials. (for e.g. you can have 2-3 flickr  	accouts	and configure and use the name in the URL to get their respective photos)
+	2.a Activate the flickr module
+		FlickrMod       On
 
-  3. TODO
-	Displaying "interesting" photos.
-	Photo set for the user.
-	Handle upload/view photos for a perticular photo set.
-	Support for flickr blogs etc...
+	2.b Provide the reuired key, secret and auth-token as
+		follows. <user> is the name of the user that will
+		be called as a part of the URI (see below, step 4).
+		Enter the key, secret and auth-token in place of
+		'xxxx' in repective directives
+
+	FlickrUser      <user>
+	FlickrKey       <user>	xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+	FlickrSecret    <user>	xxxxxxxxxxxxxxx
+	FlickrAuth      <user>	xxxxxxxxxxxxxxxxxx-xxxxxxxxxxxxxxx 
+
+3. Enter the following so that the request reached mod_flickr
+   handler.
+
+	<Location /flickr>
+		SetHandler	flickr-handler
+	</Location>
+
+4. URL formats:
+   If you have configured apache as per Step 3, then the
+   format to call flickr module would be:
+
+	http://whatsoever.com/flickr/<user>/<api>/<arguments/to/the/api>
+
+	e.g. http://whatsoever.com/flickr/vshankar/getMyPhotos/1
+	This would fetch the public photos for user 'vshankar'
+	(actually whatever 'vshankar' maps to the keys). mod_flickr
+	supports four api calls. (see below)
+
+
+API Calls
+---------
+
+a. getMyPhotos		- get public photos of the user (takes 1 param: page number)
+----------------------------------------------------
+http://www.whatsoever.com/flickr/vshankar/getMyPhotos/1			# get photos in 1st page
+http://www.whatsoever.com/flickr/vshankar/getMyPhotos/2			# get photos in 2nd page
+
+b. getMySets		- get sets of the user (takes no param)
+----------------------------------------------------
+http://www.whatsoever.com/flickr/vshankar/getMySets/			# get sets (no parameters)
+
+c. getPhotosInSet	- get public photos in set (takes 2 params: set id and page number)
+----------------------------------------------------
+http://www.whatsoever.com/flickr/vshankar/getPhotosInSet/123456/1
+http://www.whatsoever.com/flickr/vshankar/getPhotosInSet/123456/2
+
+d. getRecentPhotos	- get recent public photos in flickr (take 1 param: page number)
+----------------------------------------------------
+http://www.whatsoever.com/flickr/vshankar/getRecentPhotos/1
+http://www.whatsoever.com/flickr/vshankar/getRecentPhotos/1
 
 
 
